--- a/MEAT/meat.html
+++ b/MEAT/meat.html
@@ -7,7 +7,7 @@
     <h1  style="color: blue;"> Meat</h1>
     <h2 style="color: red;"> What is meat?</h2>
     <p>Meat is animal flesh that is eaten as food.</p>
-    <img src="./meat.jpg" alt="fresh meat">
+    <img src="./meat.jpg" alt="fresh meat"style="width:200px;height:150px;">
     <h2 style="color: red;">What else is there about meat?</h2>
     <p>Humans have hunted and killed animals for meat since prehistoric times. The advent of civilization allowed the domestication of animals such as chickens, sheep, rabbits, pigs and cattle. This eventually led to their use in meat production on an industrial scale with the aid of slaughterhouses.</p>
     <H2 style="color: red;">The most popular meat</H2>
